flux/infrastructure/base/identity/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    cert-manager.io/cluster-issuer: "lab-ca"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dex.aks-lab.local
      secretName: dex-tls
  rules:
    - host: dex.aks-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
